# docforge

./: .gitignore  AGENTS.md  CODEX_START.md  INVARIANTS.md  README.md  README_DEV.md  pyproject.toml
defaults/: documentation.yml  global-invariants.md
docforge/: __main__.py  analyzer_registry.py  audit_diff.py  audit_manager.py  audit_report.py  cli.py  config.py  default_analyzers.py  default_document_generators.py  document_generator_registry.py  documentation_pipeline.py  invariant_integrity.py  knowledge.py  manual_benchmark.py  manual_blueprint.py  manual_commands.py  manual_deterministic.py  manual_django_react.py  manual_knowledge.py  manual_prompt.py  manual_service.py  multi_manual_benchmark.py  project_config.py  project_manager.py  project_registry.py  remediation.py  status_manager.py  storage_paths.py
docs/: architecture.md  cli.md  configuration.md  security.md  specification.md
project_assistant/: __main__.py  analyzer_registry.py  audit_diff.py  audit_manager.py  audit_report.py  cli.py  default_analyzers.py  default_document_generators.py  document_generator_registry.py  documentation_pipeline.py  invariant_integrity.py  knowledge.py  project_config.py  project_manager.py  project_registry.py  remediation.py  status_manager.py
reports/: audit-diff-latest.md  audit-latest.md  remediation-latest.md
scripts/: run_docforge_manual_benchmark.py  run_manual_benchmark.py  verify_docforge_manual_reference.sh
tests/: test_agents_generator.py  test_analyzer_registry.py  test_api_analyzer.py  test_api_generator.py  test_apply_documents.py  (+65 more)
(+839 files in other folders)
